[tool.poetry]
name = "kurs3"
version = "0.1.0"
description = ""
authors = ["vadimko4 <vad.informat@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest-freezegun = {path = "C:/Users/vadimko4/PycharmProjects/kurs3/pytest-freezegun-0.4.2"}


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.black]
line-length = 119
exclude ='''
(
  /(
    | \.git
  )
)'''


[tool.isort]
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
